# KuwiWiSe25UnityProject

./: .gitignore  Makefile  README.md
Assets/Materials/: SkyboxInvertNormals.mat
KuwiUnityProject/: .gitignore
KuwiUnityProject/Assets/: InputSystem_Actions.inputactions
KuwiUnityProject/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
KuwiUnityProject/QCAR/: lh  somedata16
ProjectSettings/: ProjectSettings.asset
backend/: .gitignore  Dockerfile  compose.dev.yaml  compose.yaml  entrypoint.sh  manage.py  pyproject.toml
backend/api/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_airplane_options_alter_location_options.py  0002_seed_types.py  0003_alter_airplane_options_alter_location_options.py  0004_type_alter_airplane_tail_number.py  0005_alter_type_type.py  0006_merge_0002_seed_types_0005_alter_type_type.py  0007_alter_type_options.py  0008_alter_airplane_tail_number.py  0009_alter_airplane_tail_number.py  0010_alter_location_time.py  0011_airplane_type_description_location_altitude_and_more.py
backend/plane_api/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
docu/: Doku.typ
docu/01_Einleitung/: 01_Einleitung.typ
docu/02_Systemanforderungen/: 02_Systemanforderungen.typ
docu/03_Verwendete_Assets/: 03_Verwendete_Assets.typ
docu/04_Interaktion/: 04_Interaktion.typ
docu/05_Design_der_Benutzeroberflaechen/: 05_Design_der_Benutzeroberflaechen.typ
docu/08_Fazit/: 08_Fazit.typ
presentation/: Slides.typ  slides_v2.typ  ~$slides_v2.pptx
(+592 files in other folders)
