[project]
name = "kuwi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.8",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "django-debug-toolbar>=6.1.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "markdown>=3.10",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "psycopg[binary]>=3.2",
    "gunicorn>=23.0.0",
    "whitenoise>=6.6.0",
    "drf-yasg>=1.21.11",
    "django-extensions>=4.1",
    "pydotplus>=2.0.2",
]
